--- a/style/stylesSpill.css
+++ b/style/stylesSpill.css
@@ -19,6 +19,45 @@ body{
 
 }
 
+#kontroller{
+    display: flex;
+    width: 100%;
+}
+
+#hoyre{
+    font-size: 50px;
+    width: 50%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 5px solid black;
+    border-right: 2.5px solid black;
+    border-left: 5px solid black;
+    background-color: #6600cc;
+}
+#venstre{
+    font-size: 50px;
+    width: 50%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 5px solid black;
+    border-right: 2.5px solid black;
+    border-left: 5px solid black;
+    background-color: #6600cc;
+}
+#skyt{
+    font-size: 50px;
+    width: 50%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 5px solid black;
+    border-right: 2.5px solid black;
+    border-left: 5px solid black;
+    background-color: #6600cc;
+}
+
  #knapper{
     display: flex;
     justify-content: center;
@@ -125,4 +164,18 @@ body{
 .gjem{
     display: none;
 }
+
+@media(max-width: 512px){
+    /* endrer grid til å være på to kolonner */
+    #brett{
+        margin-top: 0%;
+    }
+    #knapper{
+        width: 100% ;
+    }
+    #lagre{
+        width: 100%;
+    }
+}
+
 
