--- a/style/stylesSpill.css
+++ b/style/stylesSpill.css
@@ -29,9 +29,9 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid black;
-    border-right: 2.5px solid black;
-    border-left: 5px solid black;
+    border-bottom: 2.5px solid black;
+    border-right: 5px solid black;
+    border-left: 2.5px solid black;
     background-color: #6600cc;
 }
 #venstre{
@@ -40,7 +40,7 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid black;
+    border-bottom: 2.5px solid black;
     border-right: 2.5px solid black;
     border-left: 5px solid black;
     background-color: #6600cc;
@@ -51,9 +51,9 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid black;
+    border-bottom: 2.5px solid black;
     border-right: 2.5px solid black;
-    border-left: 5px solid black;
+    border-left: 2.5px solid black;
     background-color: #6600cc;
 }
 
@@ -64,17 +64,6 @@ body{
 
 }
 
-#start{
-    font-size: 50px;
-    width: 100%;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 5px solid black;
-    border-right: 5px solid black;
-    border-left: 5px solid black;
-    background-color: #6600cc;
-}
  
  #restart{
     font-size: 50px;
@@ -82,7 +71,7 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid black;
+    border-bottom: 2.5px solid black;
     border-right: 2.5px solid black;
     border-left: 5px solid black;
     background-color: #6600cc;
@@ -94,7 +83,7 @@ body{
     padding: 10px;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid black;
+    border-bottom: 2.5px solid black;
     border-right: 5px solid black;
     border-left: 2.5px solid black;
     background-color: #6600cc;
@@ -108,6 +97,7 @@ body{
     width: 512px;
     justify-content: center;
     align-items: center;
+    border-top: 2.5px solid black;
     border-bottom: 5px solid black;
     border-left: 5px solid black;
     border-right: 5px solid black;
