--- a/style/styleFelles.css
+++ b/style/styleFelles.css
@@ -64,6 +64,77 @@ body {
     background-color: #9900cc;
 }
 
+
+ /*FOOTER START */
+
+/* Tok inspirasjon fra NRK.no       */
+  .tiltoppen {
+    display: flex;
+    position: relative;
+    width: 100%;
+    max-width: 250px;
+    padding: 6px 10px;
+    border-radius: 77px;
+    background-color: #9900cc ;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+
+    }
+
+.tiltoppen a {
+        color: white;
+        text-decoration: none;
+        display: block;
+        position: relative;
+        width: 100%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        text-align: center;
+}
+.tiltoppen a:hover{
+  color:#6600cc;
+}
+
+  .footertopp {
+    background-color: #6600cc;
+    display: flex;
+    justify-content: space-between;
+    
+    }
+
+  
+.logofooter {
+  display: flex;
+  flex: 1;
+  align-items:center;
+  justify-content:left;
+  }
+
+.logofooter > img {
+  margin-left: 20px;
+}
+
+
+    .tilbakemelding {
+        display: flex;
+        flex: 1;
+        padding: 20px;
+    }
+  
+
+  .footerbunn {
+    background-color: #9900cc;
+    padding: 10px;
+    text-align: center;
+    
+  }
+
+.footerbunn p {
+  font-weight: bold;
+}
+
+
 @media(max-width: 600px){
     .navbar {
         flex-direction: column;
