--- a/style/styleIndex.css
+++ b/style/styleIndex.css
@@ -1,49 +1,102 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     color: white;
     margin: 0px;
     text-align: center;
 }
 
-section{
-    display: grid;
-    /* 1 fr står for fraction. Fraction er en del av den tilgjengelige plassen. */
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-    
+main{
+    margin-bottom: 10rem;
 }
 
-section > article > a > img{
-    width: 1fr;
-    height: 200px;
-    object-fit: cover;
+main a {
+    color: white;
 }
 
-/* header > nav{
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: space-evenly;
-
+h2{
+    font-size: 30px;
 }
 
-header > nav > a{
-    color: rgb(255,255,255);
-    padding: 10px;
-    text-decoration: none;
-    flex: 1;
+.forsideinfo{
+    font-size:23px;
+    margin: 2rem 6rem;
+  }
+  
+
+
+/* Kode for mainforsidebilde  */
+
+.mainforsidebilde {
+    position: relative;
     text-align: center;
+    color: white;
+    background-image: url(../bilder/space-invader.png);
+    background-position: center;
+    width: 100%;
+    height: 500px;
+    margin: 0px 0px;
+    opacity: 100%;
+    
+  }
+  
+  /*  Overlay kode tatt fra dcode   */
+  
+  .mainforsidebilde_overlay {
+    position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity 0.25s;
+    font-size: 50px;
+  
+  }
+  
+  .mainforsidebilde_overlay:hover {
+      opacity: 1;
+  }
+  
+  
+  
+ 
+
+
+@media(max-width: 600px) {
+    main{
+      margin-left:6%;
+      margin-right:6%;
+    }
+    .navbunn {
+        flex-direction: column;
+    }
+
+    .logo .fa-bars {
+        display: flex;
+    }
+
+  .logo > img{
+    padding-left: 1.5%;
+  }
+
+
+  main h2{
+    margin-bottom: 0px;
+    text-align: center;
+  }
+
+  .forsideinfo{
+    margin: 1rem;
+  }
+  
+  
 }
-
-header > nav > a:hover{
-    background-color: rgb(255,0,0);
-
-} */
-
-/* Media query gjør nettsiden mer kompatibel på flere skermer. 
-Dette kan gjøres ved at vi endrer antall kolonner i grid for ulike skjermstørrelser.  */
-@media(max-width: 800px){
-    /* endrer grid til å være på to kolonner */
-    section{
-        grid-template-columns: repeat(1,1fr);
-    }   
-}
-
+  
