--- a/style/styleTilbakemelding.css
+++ b/style/styleTilbakemelding.css
@@ -1,4 +1,5 @@
 
+/* I tilbakemelding er tilbakemeldingsskjemaet lagt inn i et main element */
 main{
     background-color:#6600cc;
     color: white;
@@ -42,7 +43,6 @@ button{
 }
 
 @media(max-width: 570px){
-
     h1{
         font-size: 10vw;
     }
